refactor: infrastructure API 클라이언트 코드 품질 개선
- ApplyhomeSubscriptionItem 인터페이스로 3개 record 통합, builder/parse/fetch 메서드 대폭 축소
- HouseType enum에 detailPath/pricePath 추가하여 API 경로 중앙 관리
- LhResidentialFilter 유틸 추출로 LH 클라이언트 간 중복 제거
- LhWebScraperClient Map<String,Object> → LhWebCalendarResponse/Item record 전환
- TelegramNotificationClient Map → TelegramSendMessageRequest record 전환
- ObjectMapper Spring Bean 주입 (LhApiClient, LhWebScraperClient)
- 데드코드 삭제 (fetchRemainingCompetitionRates, MapExtractor)
- 매직넘버 상수 추출 (PRICE_DETAIL_PAGE_SIZE, API_RATE_LIMIT_MS 등)